# Olio-ohjelmointi-2025

./: README.md  Vk1.cpp
Olio-ohjelmointivk3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Olioohjelmointivk2/: CMakeLists.txt  game.cpp  game.h  main.cpp
QTsoftware/Viikkotehtavat71/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QTsoftware/Viikkotehtavat72/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Vk4tehtavat/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
oliovk5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
vk6viikkotehtava/: CMakeLists.txt  main.cpp  students.cpp  students.h
